build: Don't accept different *FLAGS between configuratio and built time
The CFLAGS and LDFLAGS passed by the user are used during configuration
time to check dependencies. Allowing the user to pass different flags
after configuration risks the features found at build time not matching
the ones found by the dependency resolver, breaking the build in the
best of cases.

To solve, don't use CFLAGS and LDFLAGS when setting the COMMON_*FLAGS
used by the build, preferring instead to always getting them from the
CONFIG_* values. And in order to simplify setting them, allow KConfig
to get the default of those values from variables passed by the user.

While we are at it, allow the same thing with the PREFIX value.

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -62,9 +62,13 @@ config MODULES
 
             If unsure, say Y.
 
+config ENV_PREFIX
+	string
+	option env="PREFIX"
+
 config PREFIX
 	string "Installation prefix"
-	default "/usr"
+	default $ENV_PREFIX
 	help
             This path is the intended installation prefix for the
             binaries. It is used by code paths that need to look for
@@ -95,14 +99,24 @@ config BUILD_TYPE_RELEASE
 	bool "release"
 endchoice
 
+config ENV_CFLAGS
+	string
+	option env="CFLAGS"
+
 config CONFIG_CFLAGS
        string "Arbitrary CFLAGS"
+       default $ENV_CFLAGS
        help
            Sets arbitrary CFLAGS to be used across make invocations
            without the need to be provided on every make call.
 
+config ENV_LDFLAGS
+	string
+	option env="LDFLAGS"
+
 config CONFIG_LDFLAGS
        string "Arbitrary LDFLAGS"
+       default $ENV_LDFLAGS
        help
            Sets arbitrary LDFLAGS to be used across make invocations
            without the need to be provided on every make call.
