Change license on JSON files as well
It's just a short description.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bindings"
   ],
   "author": "",
-  "license": "BSD-3-Clause",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/solettaproject/soletta/issues"
   },
