build: make it possible to declare OIC specs inside node dirs
So that it's easier for a new node, not related to our flow/oic, to get
in Soletta's tree and also benefit from our auto-generation (think of a
static build with a new OIC-capable node).

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/modules/flow/oic/Makefile
+++ b/src/modules/flow/oic/Makefile
@@ -1,3 +1,4 @@
 obj-$(FLOW_NODE_TYPE_OIC) += oic.mod
 obj-oic-$(FLOW_NODE_TYPE_OIC) := oic.json oic.o
+obj-oic-$(FLOW_NODE_TYPE_OIC)-oic := core.light.json
 obj-oic-$(FLOW_NODE_TYPE_OIC)-type := flow
