comms: Use tinycbor/cbor.h instead of cbor.h on includes
RIOT has a cbor.h of its own, in the same include path as every RIOT
module, so including cbor.h directly clashes.
Instead, make it possible to declare private headers on our Makefiles
that will be copied/generated to the stage directory and included from
there, with proper namespaces.

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -35,18 +35,30 @@ obj-networking-$(COAP) += \
     coap.o \
     sol-coap.o
 
-obj-networking-$(OIC) += \
-    sol-oic-cbor.o \
-    sol-oic-client.o \
-    sol-oic-common.o \
-    sol-oic-server.o \
+obj-$(OIC) += tinycbor.mod
+
+obj-tinycbor-y = \
     $(TINYCBOR_SRC_PATH)/cborencoder.o \
     $(TINYCBOR_SRC_PATH)/cborerrorstrings.o \
     $(TINYCBOR_SRC_PATH)/cborparser.o \
     $(TINYCBOR_SRC_PATH)/cborpretty.o
 
+obj-tinycbor-private-headers += \
+    $(TINYCBOR_SRC_PATH)/cbor.h
+
+obj-tinycbor-y-extra-cflags += \
+    -Wno-cpp \
+    -Wno-declaration-after-statement \
+    -Wno-float-equal \
+    -Wno-undef
+
+obj-networking-$(OIC) += \
+    sol-oic-cbor.o \
+    sol-oic-client.o \
+    sol-oic-common.o \
+    sol-oic-server.o \
+
 obj-networking-$(OIC)-extra-cflags += \
-    -I$(TINYCBOR_SRC_PATH) \
     -Wno-cpp \
     -Wno-declaration-after-statement \
     -Wno-float-equal \
