--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -10,3 +10,5 @@ sample-static-files-$(STATIC_FILES_SAMPLE) := static-files.c
 sample-$(SERVER_SAMPLE) += server
 sample-server-$(SERVER_SAMPLE) := server.c
 
+sample-$(SERVER_SSE_SAMPLE) += server-sse
+sample-server-sse-$(SERVER_SSE_SAMPLE) := server-sse.c
