--- a/src/samples/coap/Makefile
+++ b/src/samples/coap/Makefile
@@ -2,9 +2,9 @@ sample-$(COAP_CLIENT_SERVER_SAMPLES) += coap-sample-client coap-sample-server
 sample-coap-sample-client-$(COAP_CLIENT_SERVER_SAMPLES) := simple-client.c
 sample-coap-sample-server-$(COAP_CLIENT_SERVER_SAMPLES) := simple-server.c
 
-sample-$(OIC_SAMPLES) += oic-sample-client oic-sample-server iotivity-test-client
-sample-oic-sample-client-$(OIC_SAMPLES) := oic-client.c
-sample-oic-sample-server-$(OIC_SAMPLES) := oic-server.c
+sample-$(OIC_SAMPLES) += oic-client oic-server iotivity-test-client
+sample-oic-client-$(OIC_SAMPLES) := oic-client.c
+sample-oic-server-$(OIC_SAMPLES) := oic-server.c
 sample-iotivity-test-client-$(OIC_SAMPLES) := iotivity-test-client.c
 
 sample-$(LWM2M_SAMPLES) += lwm2m-sample-server lwm2m-sample-client
