Samples: Add missing samples to the build system.
Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -220,6 +220,10 @@ source "src/samples/flow/power-supply/Kconfig"
 source "src/samples/flow/trash-disposer/Kconfig"
 source "src/samples/flow/unix-socket/Kconfig"
 source "src/samples/flow/semaphore-monitor/Kconfig"
+source "src/samples/flow/http-oauth/Kconfig"
+source "src/samples/flow/am2315/Kconfig"
+source "src/samples/flow/js/Kconfig"
+source "src/samples/flow/mqtt/Kconfig"
 
 endmenu
 
