--- a/src/samples/flow/grove-kit/Kconfig
+++ b/src/samples/flow/grove-kit/Kconfig
@@ -22,3 +22,23 @@ config FLOW_GROVE_SOUND_SENSOR_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES
 	default y
+
+config FLOW_GROVE_LED_WAVE_GENERATOR_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES
+	default y
+
+config FLOW_GROVE_LIGHT_SENSOR_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES
+	default y
+
+config FLOW_GROVE_ROTARY_ANGLE_SENSOR_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES
+	default y
+
+config FLOW_GROVE_TEMPERATURE_SENSOR_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES
+	default y
