--- a/src/samples/flow/grove-kit/lcd/Kconfig
+++ b/src/samples/flow/grove-kit/lcd/Kconfig
@@ -37,3 +37,13 @@ config FLOW_GROVE_LCD_TEXT_DIRECTION_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
 	default y
+
+config FLOW_GROVE_LCD_FADE_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	default y
+
+config FLOW_GROVE_LCD_FORM_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	default y
