--- a/src/samples/flow/http-server/Makefile
+++ b/src/samples/flow/http-server/Makefile
@@ -2,7 +2,10 @@ sample-$(FLOW_HTTP_SERVER_SAMPLE) += \
 	boolean \
 	drange \
 	irange \
-	string
+	string \
+	custom-ports \
+	all \
+	fbp-static-files
 
 sample-boolean-$(FLOW_HTTP_SERVER_SAMPLE) := \
 	boolean.fbp
@@ -15,3 +18,12 @@ sample-irange-$(FLOW_HTTP_SERVER_SAMPLE) := \
 
 sample-string-$(FLOW_HTTP_SERVER_SAMPLE) := \
 	string.fbp
+
+sample-custom-ports-$(FLOW_HTTP_SERVER_SAMPLE) := \
+	custom-ports.fbp
+
+sample-all-$(FLOW_HTTP_SERVER_SAMPLE) := \
+	all.fbp
+
+sample-fbp-static-files-$(FLOW_HTTP_SERVER_SAMPLE) := \
+	static-files.fbp
