--- a/src/samples/flow/minnow-calamari/Makefile
+++ b/src/samples/flow/minnow-calamari/Makefile
@@ -22,3 +22,7 @@ sample-$(FLOW_CALAMARI_RGB_LED_SAMPLE) += calamari-rgb-led
 sample-calamari-rgb-led-$(FLOW_CALAMARI_RGB_LED_SAMPLE) := calamari-rgb-led.fbp
 sample-calamari-rgb-led-$(FLOW_CALAMARI_RGB_LED_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
 
+sample-$(FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE) += calamari-button-accumulator-persistence
+sample-calamari-button-accumulator-persistence-$(FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE) := calamari-button-accumulator-persistence.fbp
+sample-calamari-button-accumulator-persistence-$(FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
