--- a/src/samples/flow/misc/Kconfig
+++ b/src/samples/flow/misc/Kconfig
@@ -17,3 +17,18 @@ config FLOW_MISC_TICKETS_QUEUE_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_KEYBOARD
 	default y
+
+config FLOW_MISC_FLOWER_POWER_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_FLOWER_POWER
+	default y
+
+config FLOW_MISC_FREEGEO_IP_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_LOCATION
+	default y
+
+config FLOW_MISC_PERSISTENCE_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PERSISTENCE
+	default y
