--- a/src/samples/flow/minnow-calamari/Kconfig
+++ b/src/samples/flow/minnow-calamari/Kconfig
@@ -27,3 +27,8 @@ config FLOW_CALAMARI_RGB_LED_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CALAMARI
 	default y
+
+config FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CALAMARI && FLOW_NODE_TYPE_PERSISTENCE
+	default y
