util: rename SOL_UTIL_ARRAY_SIZE to sol_util_array_size
Signed-off-by: Vladimir Cernov <cernov.vladimir@gmail.com>

--- a/src/test-cpp/headers.cc.in
+++ b/src/test-cpp/headers.cc.in
@@ -95,7 +95,7 @@ startup()
     const void *v;
     int arr[10];
 
-    SOL_UTIL_ARRAY_SIZE(arr);
+    sol_util_array_size(arr);
 
     sol_util_strerrora(2);
 
