oic: Add support for secure OIC connections using pre shared certs
Add implementation of certificates handling in oic-security, so we can
stablish a secure oic connection using pre-shared ceritificates.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -57,6 +57,7 @@ obj-networking-$(OIC) += \
     sol-oic-client.o \
     sol-oic-common.o \
     sol-oic-server.o \
+    sol-oic-security.o
 
 obj-networking-$(OIC)-extra-cflags += \
     -Wno-cpp \
