list: add test suite
Signed-off-by: Vladimir Cernov <cernov.vladimir@gmail.com>

--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -89,6 +89,10 @@ config TEST_VECTOR
 	bool "vector"
 	default y
 
+config TEST_LIST
+    bool "list"
+    default y
+
 config TEST_JSON
 	bool "json"
 	default y
