flow/oic: create node types for each oic data model resources
It required changes on sol-oic-gen script as well

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/modules/flow/oic/Makefile
+++ b/src/modules/flow/oic/Makefile
@@ -1,4 +1,5 @@
 obj-$(FLOW_NODE_TYPE_OIC) += oic.mod
 obj-oic-$(FLOW_NODE_TYPE_OIC) := oic.json oic.o
-obj-oic-$(FLOW_NODE_TYPE_OIC)-oic := core.light.json
+obj-oic-$(FLOW_NODE_TYPE_OIC)-oic := y
+obj-oic-$(FLOW_NODE_TYPE_OIC)-oic-dirs := $(OIC_DATA_MODELS)
 obj-oic-$(FLOW_NODE_TYPE_OIC)-type := flow
