--- a/src/samples/flow/grove-kit/lcd/Kconfig
+++ b/src/samples/flow/grove-kit/lcd/Kconfig
@@ -1,49 +1,49 @@
 config FLOW_GROVE_LCD_AUTOSCROLL_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER
 	default y
 
 config FLOW_GROVE_LCD_BLINK_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && BOOLEAN && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER
 	default y
 
 config FLOW_GROVE_LCD_CURSOR_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER
 	default y
 
 config FLOW_GROVE_LCD_DISPLAY_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_TIMER
 	default y
 
 config FLOW_GROVE_LCD_HELLO_WORLD_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_INT
 	default y
 
 config FLOW_GROVE_LCD_SCROLL_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_BOOLEAN
 	default y
 
 config FLOW_GROVE_LCD_SET_CURSOR_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT
 	default y
 
 config FLOW_GROVE_LCD_TEXT_DIRECTION_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN
 	default y
 
 config FLOW_GROVE_LCD_FADE_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_FLOAT
 	default y
 
 config FLOW_GROVE_LCD_FORM_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GROVE && FLOW_NODE_TYPE_FORM && FLOW_NODE_TYPE_KEYBOARD && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER
 	default y
