--- a/src/samples/network/Kconfig
+++ b/src/samples/network/Kconfig
@@ -1,8 +1,9 @@
 config NETWORK_SAMPLES
 	bool "Network samples"
+        depends on NETWORK
 	default y
 
 config NETWORK_STATUS_SAMPLE
 	bool "Network status"
-	depends on NETWORK_SAMPLES && NETWORK
+	depends on NETWORK_SAMPLES
 	default y
