--- a/src/samples/flow/foosball/Kconfig
+++ b/src/samples/flow/foosball/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_FOOSBALL_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GTK
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GTK && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_CONVERTER
 	default y
