--- a/src/samples/flow/gtk-gallery/Kconfig
+++ b/src/samples/flow/gtk-gallery/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_GTK_GALLERY_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GTK
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_GTK && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_INT
 	default y
