--- a/src/samples/flow/http-client/Kconfig
+++ b/src/samples/flow/http-client/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_HTTP_CLIENT_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_CLIENT
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_CLIENT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_FILE
 	default y
