--- a/src/samples/flow/http-json/Kconfig
+++ b/src/samples/flow/http-json/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_HTTP_JSON_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_CLIENT && FLOW_NODE_TYPE_JSON
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_CLIENT && FLOW_NODE_TYPE_JSON && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_TEMPERATURE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_SWITCHER && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_LOCATION
 	default y
