--- a/src/samples/flow/http-server/Kconfig
+++ b/src/samples/flow/http-server/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_HTTP_SERVER_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_SERVER && FLOW_NODE_TYPE_KEYBOARD
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_SERVER && FLOW_NODE_TYPE_KEYBOARD && FLOW_NODE_TYPE_CONSOLE
 	default y
