--- a/src/samples/flow/iio/Kconfig
+++ b/src/samples/flow/iio/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_IIO_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_IIO && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_IIO && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_IIO
 	default y
