--- a/src/samples/flow/io/Kconfig
+++ b/src/samples/flow/io/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_IO_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PWM && FLOW_NODE_TYPE_SERVO_MOTOR
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PWM && FLOW_NODE_TYPE_SERVO_MOTOR && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_BOOLEAN
 	default y
