--- a/src/samples/flow/led-strip/Kconfig
+++ b/src/samples/flow/led-strip/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_LD_STRIP_LPD8806_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_LED_STRIP
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_LED_STRIP && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_RANDOM && FLOW_NODE_TYPE_TIMER
 	default y
