--- a/src/samples/flow/oic/light-scan/Kconfig
+++ b/src/samples/flow/oic/light-scan/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_OIC_SCAN_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_OIC && FLOW_NODE_TYPE_GTK
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_OIC && FLOW_NODE_TYPE_GTK && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_FORM && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_PERSISTENCE
 	default y
