--- a/src/samples/flow/power-supply/Kconfig
+++ b/src/samples/flow/power-supply/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_POWER_SUPPLY_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_POWER_SUPPLY && FLOW_NODE_TYPE_GTK
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_POWER_SUPPLY && FLOW_NODE_TYPE_GTK && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONSTANT
 	default y
