--- a/src/samples/flow/trash-disposer/Kconfig
+++ b/src/samples/flow/trash-disposer/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_TRASH_DISPOSER
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_SERVO_MOTOR && FLOW_NODE_TYPE_GPIO
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_SERVO_MOTOR && FLOW_NODE_TYPE_GPIO && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_BOOLEAN
 	default y
