--- a/src/samples/flow/unix-socket/Kconfig
+++ b/src/samples/flow/unix-socket/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_UNIX_SOCKET_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_UNIX_SOCKET && FLOW_NODE_TYPE_KEYBOARD
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_UNIX_SOCKET && FLOW_NODE_TYPE_KEYBOARD && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_INT && FLOW_NOTE_TYPE_CONSTANT
 	default y
