--- a/src/samples/flow/update/Kconfig
+++ b/src/samples/flow/update/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_UPDATE_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_UPDATE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_UPDATE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_CONVERTER
 	default y
