--- a/src/samples/mqtt/Kconfig
+++ b/src/samples/mqtt/Kconfig
@@ -1,8 +1,9 @@
 config MQTT_SAMPLES
 	bool "MQTT samples"
+	depends on MQTT
 	default y
 
 config MQTT_PUBLISH_SUBSCRIBE_SAMPLES
 	bool "MQTT publish/subscribe samples"
-	depends on MQTT && MQTT_SAMPLES
+	depends on MQTT_SAMPLES
 	default y
