--- a/src/samples/flow/misc/Kconfig
+++ b/src/samples/flow/misc/Kconfig
@@ -27,3 +27,23 @@ config FLOW_MISC_PERSISTENCE_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PERSISTENCE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_WALLCLOCK && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSOLE
 	default y
+
+config FLOW_MISC_CHANGE_HOSTNAME_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSOLE
+	default y
+
+config FLOW_MISC_CHANGE_TIMEZONE_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSOLE
+	default y
+
+config FLOW_MISC_CHANGE_SYSTEM_CLOCK_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONVERTER
+	default y
+
+config FLOW_MISC_CHANGE_LOCALE_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSOLE
+	default y
