Node.js bindings: Build bindings heeding configuration
This sacrifices our ability to build bindings against an existing soletta
installation identified by its pkgconfig file, because the pkgconfig file does
not contain information about the configuration options that were used when
building Soletta.

Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Node.js bindings for Soletta",
   "main": "index.js",
   "scripts": {
+    "preinstall": "echo '{}' > bindings/nodejs/generated/nodejs-bindings-sources.gyp",
+
+    "//": "Should not be needed once https://github.com/npm/npm/issues/12133 is fixed",
+    "install": "node-gyp rebuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
