TMP: sol-fbp-runner: add web inspector using SSE.
Use the new server-side-events (SSE) to continuously feed a browser
with events that happened in the FBP.

This should work, but the great HTML/CSS/JS are missing, only a
placeholder is done that dumps the JSON.

Signed-off-by: Gustavo Sverzut Barbieri <gustavo.barbieri@intel.com>

--- a/src/bin/sol-fbp-runner/Makefile
+++ b/src/bin/sol-fbp-runner/Makefile
@@ -3,4 +3,11 @@ bin-sol-fbp-runner-$(FBP_RUNNER) := main.c runner.c
 
 ifeq (y,$(INSPECTOR))
 bin-sol-fbp-runner-$(FBP_RUNNER) += inspector.c
+
+ifeq (y,$(HTTP_SERVER))
+bin-sol-fbp-runner-$(FBP_RUNNER) += web-inspector.c
+
+# TODO: share/soletta/web-inspector static contents
+endif
+
 endif
