form/converter: make Python-like formatting code optional.
The user is warned of the consequences on both affected nodes:
1) The form/string-formatted node won't work anymore if the option is
unset.
2) Two of the converter nodes will have their format string behavior
changed, what is documented on the Kconfig.

We could accept printf-like only formatting strings on the form
too (thus not ruining it with the option unset, but not now (maybe
later).

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/modules/flow/form/Kconfig
+++ b/src/modules/flow/form/Kconfig
@@ -11,3 +11,14 @@ config FLOW_NODE_TYPE_FORM
 		used by other node types doing visual output, such as
 		LCD display (grove/lcd-string), in conjuntion with others
 		providing input.
+
+config PYTHON_FORMATTING
+	bool "Build Python-like string formatting (string-formatted) nodes"
+	depends on FLOW_NODE_TYPE_CONVERTER
+	default y
+	help
+		Consider changing this if this functionality won't be used
+		and the final Soletta binary is meant for constrained
+		systems. Note that the string-formatted node is made useless
+		if this is not set (any interaction with these nodes will
+		lead to error packets).
