samples: Add a Bluetooth sample
This samples only enables the first Bluetooth controller found and
starts scanning for devices, printing basic information about each
device found.

Signed-off-by: Vinicius Costa Gomes <vinicius.gomes@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -187,6 +187,7 @@ source "src/samples/http/Kconfig"
 source "src/samples/mqtt/Kconfig"
 source "src/samples/mavlink/Kconfig"
 source "src/samples/network/Kconfig"
+source "src/samples/bluetooth/Kconfig"
 
 config FLOW_SAMPLES
 	bool "Flow samples"
