comms: Add socket implementation for Contiki
And enable CoAP support for it.

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -42,6 +42,10 @@ obj-networking-$(PLATFORM_ZEPHYR)-extra-cflags += \
     -I$(ZEPHYR_BASE)/net/ip/contiki/os \
     -I$(ZEPHYR_BASE)/net/ip
 
+obj-networking-$(PLATFORM_CONTIKI) += \
+    sol-network-impl-contiki.o \
+    sol-socket-impl-contiki.o
+
 obj-networking-$(COAP) += \
     coap.o \
     sol-coap.o
