samples:network:socket: Echo server
Add a simple echo server.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/network/Makefile
+++ b/src/samples/network/Makefile
@@ -1,2 +1,5 @@
 sample-$(NETWORK_SAMPLES) += network-status
 sample-network-status-$(NETWORK_STATUS_SAMPLE) := network-status.c
+
+sample-$(ECHO_SERVER_SAMPLE) += echo-server
+sample-echo-server-$(ECHO_SERVER_SAMPLE) := echo-server.c
