--- a/src/samples/network/Kconfig
+++ b/src/samples/network/Kconfig
@@ -7,3 +7,8 @@ config NETWORK_STATUS_SAMPLE
 	bool "Network status"
 	depends on NETWORK_SAMPLES
 	default y
+
+config ECHO_SERVER_SAMPLE
+	bool "Echo server"
+	depends on NETWORK_SAMPLES && NETWORK
+	default y
