samples:network:socket: Echo client
Add simple echo client.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/network/Kconfig
+++ b/src/samples/network/Kconfig
@@ -12,3 +12,8 @@ config ECHO_SERVER_SAMPLE
 	bool "Echo server"
 	depends on NETWORK_SAMPLES && NETWORK
 	default y
+
+config ECHO_CLIENT_SAMPLE
+	bool "Echo client"
+	depends on NETWORK_SAMPLES && NETWORK
+	default y
