sol-connman: Add sol-connman to compile files
Add sol-connman to compile files, so that sol-connman can be compiled.

Signed-off-by: Wu Zheng <wu.zheng@intel.com>

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -16,6 +16,16 @@ config DTLS
 
 	    If unsure, say N.
 
+config CONNMAN
+        bool "connection manager interfaces"
+        default y
+        depends on FEATURE_CONNMAN && NETWORK
+        help
+           This provides the connection manager interfaces API.
+           The user can contorl the connection manager to contorl
+           network and get the info from connection manager to get
+           the network state and info.
+
 config COAP
 	bool "CoAP"
 	default y
