Test: add the test cases for sol-connman API
The test cases will test sol-connman APIs

Signed-off-by: Wu Zheng <wu.zheng@intel.com>

--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -11,6 +11,11 @@ config TEST_COAP
 	depends on COAP
 	default y
 
+config TEST_CONNMAN
+        bool "connman"
+        depends on CONNMAN
+        default y
+
 config TEST_FBP
 	bool "fbp"
 	depends on FLOW_SUPPORT
