test: Add simple tests for address conversions
These simple tests exercise the conversion of addresses to/from
strings.

Signed-off-by: Vinicius Costa Gomes <vinicius.gomes@intel.com>

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -95,3 +95,6 @@ test-test-certificate-$(TEST_CERTIFICATE) := test.c test-certificate.c
 
 test-$(TEST_LWM2M) += test-lwm2m
 test-test-lwm2m-$(TEST_LWM2M) := test.c test-lwm2m.c
+
+test-$(TEST_NETWORK) += test-network
+test-test-network-$(TEST_NETWORK) := test.c test-network.c
