--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -128,3 +128,8 @@ config TEST_LWM2M
        bool "lwm2m"
        depends on COAP && LWM2M
        default y
+
+config TEST_NETWORK
+       bool "network"
+       depends on NETWORK && BLUETOOTH
+       default y
