test: Add Bluetooth specific tests
Theses tests deal mostly with UUIDs.

Signed-off-by: Vinicius Costa Gomes <vinicius.gomes@intel.com>

--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -133,3 +133,8 @@ config TEST_NETWORK
        bool "network"
        depends on NETWORK && BLUETOOTH
        default y
+
+config TEST_BLUETOOTH
+       bool "bluetooth"
+       depends on NETWORK && BLUETOOTH
+       default y
