test: Add Bluetooth specific tests
Theses tests deal mostly with UUIDs.

Signed-off-by: Vinicius Costa Gomes <vinicius.gomes@intel.com>

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -98,3 +98,6 @@ test-test-lwm2m-$(TEST_LWM2M) := test.c test-lwm2m.c
 
 test-$(TEST_NETWORK) += test-network
 test-test-network-$(TEST_NETWORK) := test.c test-network.c
+
+test-$(TEST_BLUETOOTH) += test-bluetooth
+test-test-bluetooth-$(TEST_BLUETOOTH) := test.c test-bluetooth.c
