--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -137,3 +137,8 @@ config TEST_NETWORK
        bool "network"
        depends on NETWORK && BLUETOOTH
        default y
+
+config TEST_BLUETOOTH
+       bool "bluetooth"
+       depends on NETWORK && BLUETOOTH
+       default y
